# LAB23-JNIDemo2

./: README.md
JNIDemo2/app/: build.gradle.kts
JNIDemo2/app/src/cpp/: CMakeLists.txt  nativecalc.cpp
JNIDemo2/app/src/main/cpp/: CMakeLists.txt  jnidemo.cpp
JNIDemo2/app/src/main/java/com/example/jnidemo/: MainActivity.java  SecMan.java
JNIDemo2/app/src/main/res/drawable/: badge_alerte.xml  badge_ok.xml  card_bg.xml
JNIDemo2/app/src/main/res/layout/: activity_main.xml
JNIDemo2/app/src/main/res/values/: colors.xml
JNIDemo2/gradle/wrapper/: gradle-wrapper.properties
